--- a/esphome/somfy-rts.yaml
+++ b/esphome/somfy-rts.yaml
@@ -1,5 +1,6 @@
 esphome:
-  name: somfy
+  name: "somfy-rts"
+  name_add_mac_suffix: true
   platform: ESP32
   board: esp32dev
   libraries:
@@ -8,17 +9,13 @@ esphome:
     - SmartRC-CC1101-Driver-Lib@2.5.6
     - Somfy_Remote_Lib@0.4.1
   includes:
-    - somfy_secrets.h
     - somfy_cover.h
-
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "somfy-bridge"
-    password: "123123123"
+    manual_ip:
+      static_ip: 192.168.4.1
+      gateway: 192.168.4.1
+      subnet: 255.255.255.0
 
 captive_portal:
 
@@ -43,51 +40,68 @@ sensor:
   - platform: wifi_signal
     name: "WiFi Signal Sensor"
 
-
-
-
 cover:
   - platform: custom
     lambda: |-
       auto somfy_remote = new SomfyESPRemote();
-      somfy_remote->add_cover("somfy", "CH1", SOMFY_CH1);
-      somfy_remote->add_cover("somfy", "CH2", SOMFY_CH2);
-      somfy_remote->add_cover("somfy", "CH3", SOMFY_CH3);
-      somfy_remote->add_cover("somfy", "CH4", SOMFY_CH4);
-      somfy_remote->add_cover("somfy", "CH5", SOMFY_CH5);
-      somfy_remote->add_cover("somfy", "CH6", SOMFY_CH6);
-      somfy_remote->add_cover("somfy", "CH7", SOMFY_CH7);
-      somfy_remote->add_cover("somfy", "CH8", SOMFY_CH8);
-      somfy_remote->add_cover("somfy", "CH9", SOMFY_CH9);
-      somfy_remote->add_cover("somfy", "CH10", SOMFY_CH10);
-      somfy_remote->add_cover("somfy", "CH11", SOMFY_CH11);
-      somfy_remote->add_cover("somfy", "CH12", SOMFY_CH12);
-      somfy_remote->add_cover("somfy", "CH13", SOMFY_CH13);
-      somfy_remote->add_cover("somfy", "CH14", SOMFY_CH14);
-      somfy_remote->add_cover("somfy", "CH15", SOMFY_CH15);
-      somfy_remote->add_cover("somfy", "CH16", SOMFY_CH16);
+      byte mac[6];
+      uint32_t somfy_addr = 0;
+      WiFi.macAddress(mac);
+      somfy_addr = (mac[5] << 16) + (mac[4] << 8) + mac[3];
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+1);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+2);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+3);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+4);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+5);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+6);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+7);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+8);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+9);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+10);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+11);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+12);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+13);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+14);
+      ESP_LOGD("somfy_addr", "Channel address: %06x", somfy_addr+15);
+      somfy_remote->add_cover("somfy", "CH1", somfy_addr);
+      somfy_remote->add_cover("somfy", "CH2", somfy_addr+1);
+      somfy_remote->add_cover("somfy", "CH3", somfy_addr+2);
+      somfy_remote->add_cover("somfy", "CH4", somfy_addr+3);
+      somfy_remote->add_cover("somfy", "CH5", somfy_addr+4);
+      somfy_remote->add_cover("somfy", "CH6", somfy_addr+5);
+      somfy_remote->add_cover("somfy", "CH7", somfy_addr+6);
+      somfy_remote->add_cover("somfy", "CH8", somfy_addr+7);
+      somfy_remote->add_cover("somfy", "CH9", somfy_addr+8);
+      somfy_remote->add_cover("somfy", "CH10", somfy_addr+9);
+      somfy_remote->add_cover("somfy", "CH11", somfy_addr+10);
+      somfy_remote->add_cover("somfy", "CH12", somfy_addr+11);
+      somfy_remote->add_cover("somfy", "CH13", somfy_addr+12);
+      somfy_remote->add_cover("somfy", "CH14", somfy_addr+13);
+      somfy_remote->add_cover("somfy", "CH15", somfy_addr+14);
+      somfy_remote->add_cover("somfy", "CH16", somfy_addr+15);
       App.register_component(somfy_remote);
       return somfy_remote->covers;
 
     covers:
       - id: "somfy1"
-        name: "Somfy CH1"
+        name: "Somfy CH01"
       - id: "somfy2"
-        name: "Somfy CH2"
+        name: "Somfy CH02"
       - id: "somfy3"
-        name: "Somfy CH3"
+        name: "Somfy CH03"
       - id: "somfy4"
-        name: "Somfy CH4"
+        name: "Somfy CH04"
       - id: "somfy5"
-        name: "Somfy CH5"
+        name: "Somfy CH05"
       - id: "somfy6"
-        name: "Somfy CH6"
+        name: "Somfy CH06"
       - id: "somfy7"
-        name: "Somfy CH7"
+        name: "Somfy CH07"
       - id: "somfy8"
-        name: "Somfy CH8"
+        name: "Somfy CH08"
       - id: "somfy9"
-        name: "Somfy CH9"
+        name: "Somfy CH09"
       - id: "somfy10"
         name: "Somfy CH10"
       - id: "somfy11"
