--- a/esphome/somfy-rts.yaml
+++ b/esphome/somfy-rts.yaml
@@ -120,6 +120,8 @@ cover:
 
 
 button:
+  - platform: factory_reset
+    name: Restart with Factory Default Settings
   - platform: template
     name: "PROG1"
     on_press:
